--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "^11.3.2",
+    "@supabase/supabase-js": "^2.45.1",
+    "@tanstack/react-query": "^5.51.23",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-reanimated": "^3.15.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
