--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-reanimated": "^3.15.0",
     "react-native-svg": "^15.5.0",
     "react-native-url-polyfill": "^2.0.0"
