Removed the edit option when an active workout

--- a/ios/MyHealth/Mcleannfo.plist
+++ b/ios/MyHealth/Mcleannfo.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>MyHealth</string>
+	<string>Mclean</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
