--- a/ios/MyHealth/Mcleannfo.plist
+++ b/ios/MyHealth/Mcleannfo.plist
@@ -48,6 +48,11 @@
 		<string>SFUIText-Semibold.ttf</string>
 		<string>SFUIText-SemiboldItalic.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
