--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,11 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+# use_modular_headers!
+use_frameworks! :linkage => :static
+$RNFirebaseAsStaticFramework = true
+
+
 target 'MyHealth' do
   config = use_native_modules!
 
