--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.15.0",
     "react-native-svg": "^15.5.0",
     "react-native-url-polyfill": "^2.0.0"
