--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-push-notification": "^8.1.1",
+    "react-native-notifications": "^5.1.0",
     "react-native-reanimated": "^3.15.0",
     "react-native-svg": "^15.5.0",
     "react-native-url-polyfill": "^2.0.0"
@@ -38,6 +38,7 @@
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
