--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/messaging": "^20.4.0",
     "@supabase/supabase-js": "^2.45.1",
     "@tanstack/react-query": "^5.51.23",
+    "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
